PNG Parser dependency temp fix; scrollbar UI fix

--- a/ibr/examples/html/index.css
+++ b/ibr/examples/html/index.css
@@ -57,7 +57,7 @@ ul, #layerList {
 #layerListContainer {
   display: block;
   height: 75%;
-  overflow: scroll;
+  overflow: auto;
   padding: 4px;
 }
 
